fix(example): 修复 GBK 编码歌词乱码
loadTextResource 原先硬编码 UTF-8 解码，GBK 歌词显示为锟斤拷。
改为先读原始字节，按 Content-Type charset > UTF-8 有效性检测 > GBK 回退策略解码。